<resources>
    <string name="app_name">Logo</string>
    <string name="Title">Logo</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="more_fragment">More Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="search_in">Search In</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="from">From</string>
    <string name="yyyy_dd_mm">yyyy-mm-dd</string>
    <string name="to">To</string>
    <string name="search_in2">Search in</string>
    <string name="apply">Apply</string>
</resources>